--- a/package.json
+++ b/package.json
@@ -6,14 +6,18 @@
 	"scripts": {
 		"dev": "node src/app.js -debug",
 		"push": "git push heroku master",
-		"logs": "heroku logs -a oq-api"
+		"logs": "heroku logs -a oq-api -t"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"body-parser": "^1.19.0",
 		"cli": "^1.0.1",
+		"connect-busboy": "^0.0.2",
 		"dotenv": "^8.2.0",
-		"express": "^4.17.1"
+		"express": "^4.17.1",
+		"google-spreadsheet": "^3.1.15",
+		"imgur": "^1.0.0"
 	}
 }
