--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"start": "node src/app.js",
 		"dev": "node src/app.js -debug",
-		"logs": "heroku logs ---app=oq-api -t",
+		"logs": "heroku logs --app=oq-api -t",
 		"on": "heroku ps:scale web=1 --app=oq-api",
 		"off": "heroku ps:scale web=0 --app=oq-api"
 	},
